# RP2040_Project_Examples

./: README.md
MIDI_Keyboard/: CMakeLists.txt  main.c  midi_commands.h
multicore_i2c_peripheralmode/: README.md
picoSPI_foricetest/: CMakeLists.txt  main.c
picoUSB_transfer_test/: CMakeLists.txt  main.c  rx.txt
